error_v4.log
    Checking serde_core v1.0.228
    Checking futures-io v0.3.31
    Checking indexmap v2.12.1
    Checking hashbrown v0.14.5
    Checking regex-automata v0.4.13
    Checking either v1.15.0
    Checking lazy_static v1.5.0
    Checking num-traits v0.2.19
    Checking futures-util v0.3.31
    Checking itertools v0.12.1
    Checking dashmap v5.5.3
    Checking regex v1.12.2
    Checking serde v1.0.228
    Checking serde_json v1.0.145
    Checking futures-executor v0.3.31
    Checking toml_datetime v0.6.11
    Checking serde_spanned v0.6.9
    Checking ciborium v0.2.2
    Checking url v2.5.7
    Checking oco_ref v0.1.1
    Checking slotmap v1.0.7
    Checking serde_qs v0.12.0
    Checking serde_test v1.0.177
    Checking serde_qs v0.13.0
    Checking futures v0.3.31
    Checking toml_edit v0.22.27
    Checking wasm-bindgen v0.2.105
    Checking linear-map v1.2.0
    Checking js-sys v0.3.82
    Checking console_error_panic_hook v0.1.7
    Checking toml v0.8.23
    Checking config v0.14.1
    Checking leptos_config v0.6.15
    Checking web-sys v0.3.82
    Checking wasm-bindgen-futures v0.4.55
    Checking serde-wasm-bindgen v0.6.5
    Checking getrandom v0.2.16
    Checking chrono v0.4.42
    Checking gloo-utils v0.2.0
    Checking wasm-streams v0.4.2
    Checking leptos_reactive v0.6.15
    Checking gloo-utils v0.1.7
    Checking gloo-net v0.6.0
    Checking gloo-net v0.1.0
    Checking reqwasm v0.5.0
    Checking server_fn v0.6.15
    Checking leptos_dom v0.6.15
    Checking leptos_server v0.6.15
    Checking leptos v0.6.15
    Checking leptos_router v0.6.15
    Checking leptos_meta v0.6.15
    Checking uci v0.1.0 (C:\Users\denil\Desktop\uci)
error[E0597]: `patient.uci_admission_date` does not live long enough
  --> src\frontend\patient_list.rs:78:72
   |
42 |   ...   children=move |patient| {
   |                        ------- binding `patient` declared here
...
50 | / ...       view! {
51 | | ...           <div class="bg-white rounded-2xl shadow-sm border border-gray-100 hover:shadow-xl transition-all duration-300 pb-2">
52 | | ...               <div class="p-6 pb-4">
53 | | ...                   <div class="flex justify-between items-start mb-4">
...  |
78 | | ...                           <span class="font-medium">{patient.uci_admission_date.split('T').next().unwrap_or("")}</span>
   | |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ borrowed value does not live long enough
...  |
93 | | ...           </div>
94 | | ...       }
   | |___________- argument requires that `patient.uci_admission_date` is borrowed for `'static`
95 |   ...   }
   |         - `patient.uci_admission_date` dropped here while still borrowed

error[E0716]: temporary value dropped while borrowed
  --> src\frontend\patient_list.rs:90:51
   |
50 | / ...       view! {
51 | | ...           <div class="bg-white rounded-2xl shadow-sm border border-gray-100 hover:shadow-xl transition-all duration-300 pb-2">
52 | | ...               <div class="p-6 pb-4">
53 | | ...                   <div class="flex justify-between items-start mb-4">
...  |
90 | | ...                   <span>"ID: " {id.clone().to_string().split(':').last().unwrap_or("?")}</span>
   | |                                     ^^^^^^^^^^^^^^^^^^^^^^ creates a temporary value which is freed while still in use
...  |
93 | | ...           </div>
94 | | ...       }
   | |___________- argument requires that borrow lasts for `'static`
95 |   ...   }
   |         - temporary value is freed at the end of this statement

Some errors have detailed explanations: E0597, E0716.
For more information about an error, try `rustc --explain E0597`.
error: could not compile `uci` (lib) due to 2 previous errors
